# kickbot

./: README.md
kickbot/: pyproject.toml
kickbot/src/kickbot/: config.py  main.py
